--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,11 +14,16 @@
 }
 
 .position-row:hover {
-  background-color: #f5f5f5;
+  background-color: #97e1f7b6;
 }
 
 .saved {
   color: green;
   font-weight: 600;
   font-size: 0.9rem;
+}
+p{
+color: #858383;
+text-decoration:  underline #858383 ;
+text-underline-offset: 5px;
 }
