--- a/src/app/position-users/position-users.html
+++ b/src/app/position-users/position-users.html
@@ -21,7 +21,7 @@
       [(ngModel)]="newUser"
       (keydown)="onEnter($event)"
     />
-    <button class="btn btn-primary" (click)="addUser()">Add User</button>
+    <button class="btn btn-primary" (click)="addUser()">➕Add User</button>
   </div>
 
   <!-- Users list -->
@@ -44,7 +44,7 @@
 
   <!-- Footer actions -->
   <div class="footer-actions">
-    <button class="btn btn-secondary" (click)="goBack()">Cancel</button>
-    <button class="btn btn-primary" (click)="save()">Save</button>
+    <button class="btn btn-secondary" (click)="goBack()">🚫 Cancel</button>
+    <button class="btn btn-primary" (click)="save()">💾Save</button>
   </div>
 </div>
