division drop down added

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
         <span class="name">{{ pos.name }}</span>
 
         @if (lastSavedPositionId === pos.id) {
-          <span class="saved">✔ Responsibilities and User Saved</span>
+          <span class="saved">✔ Responsibilities and User + Division Saved</span>
         }
       </li>
     }
